cached Subjekt2 pinciple

--- a/Web.Statu/Views/Subjekt/DalsiInformace.cshtml
+++ b/Web.Statu/Views/Subjekt/DalsiInformace.cshtml
@@ -10,6 +10,7 @@
 @using HlidacStatu.Lib.Data;
 
 @{
+    Layout = null;
     ViewBag.Title = "Další informace " + Model.Jmeno;
 }
 @section breadcrumb
