--- a/Web.Statu/Views/Subjekt/Dotace.cshtml
+++ b/Web.Statu/Views/Subjekt/Dotace.cshtml
@@ -1,4 +1,4 @@
-﻿@model (HlidacStatu.Lib.Data.Firma Firma, List<(string Ico, int Rok, decimal Cerpano)> Cerpani)
+﻿@model HlidacStatu.Lib.Data.Firma 
 
 @using Nest;
 @using HlidacStatu.Web.Framework;
@@ -9,9 +9,26 @@
 @using HlidacStatu.Lib.Render;
 
 @{
+        Layout = null;
+
+    var dotaceService = new HlidacStatu.Lib.Data.Dotace.DotaceService();
+    var holdingSubsidies = dotaceService.GetDotaceForHolding(Model.ICO).ToList();
+
+    List<(string Ico, int Rok, decimal Cerpano)> Cerpani = holdingSubsidies
+                    .SelectMany(s => s.Rozhodnuti
+                        .SelectMany(r => r.Cerpani
+                            .Select(c => 
+                            (
+                                Ico: s.Prijemce.Ico,
+                                Rok: c.GuessedYear ?? 0,
+                                Cerpano: c.CastkaSpotrebovana ?? 0
+                            ))
+                        )
+                    ).ToList();
+
 
     //graph
-    var dataFirma = Model.Cerpani.Where(c => c.Ico == Model.Firma.ICO)
+    var dataFirma = Cerpani.Where(c => c.Ico == Model.Firma.ICO)
         .GroupBy(s => s.Rok)
         .Select(g => new ReportDataTimeValue()
         {
@@ -20,7 +37,7 @@
         });
 
     //table
-    var companyDotace = Model.Cerpani
+    var companyDotace = Cerpani
         .Where(c => c.Ico == Model.Firma.ICO)
         .GroupBy(c => c.Rok)
         .Select(g => (Rok: g.Key, CerpanoCelkem: g.Sum(c => c.Cerpano)))
@@ -63,7 +80,7 @@
 
 
 //holding graf a tabulka
-    var dataHolding = Model.Cerpani
+    var dataHolding = Cerpani
         .GroupBy(c => c.Rok)
         .Select(g => new ReportDataTimeValue()
         {
@@ -71,7 +88,7 @@
         Value = g.Sum(c => c.Cerpano)
         });
 
-    var holdingDotace = Model.Cerpani
+    var holdingDotace = Cerpani
         .GroupBy(c => c.Ico)
         .Select(g => (Ico: g.Key,
             Nazev: HlidacStatu.Lib.Data.Firmy.GetJmeno(g.Key),
@@ -120,84 +137,13 @@
         'filter': false,
         }";
 }
-@section breadcrumb
-{
-    <ol class="breadcrumb">
-        <li><a href="/">Hlídač Státu</a></li>
-        <li>Úřady a firmy</li>
-        <li><a href="/subjekt2/@Model.Firma.ICO">@Model.Firma.Jmeno</a></li>
-        <li class="active">@ViewBag.Title</li>
-    </ol>
-}
 
 
-@section scripts
-{
-    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
-    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
-    @Scripts.Render("~/bundles/highcharts")
-    <script src="/scripts/highcharts-6/highcharts-more.js"></script>
-    <script src="/scripts/highcharts-6/modules/heatmap.js"></script>
-    <script src="/scripts/highcharts-6/modules/treemap.js"></script>
-   
-
-}
-
-<style>
-    .my-0 {
-        margin-top: 0px;
-        margin-bottom: 0px;
-    }
-
-    .py-0 {
-        padding-top: 0px;
-        padding-bottom: 0px;
-    }
-
-    .boxes h4 {
-        font-size: 24px;
-        font-weight: bold;
-    }
-
-    .head h3 {
-        font-size: 40px;
-        font-weight: bold;
-    }
-
-    p {
-        font-size: 16px;
-    }
-
-    .watcher .btn {
-        background-color: rgb(231,102,5);
-        padding: 7px 15px;
-        margin: 5px 0px;
-        text-transform: none;
-        font-size: 14px;
-    }
-</style>
-
-<div class="head">
-    <h3>@Html.KIndexLabelLink(Model.Firma.ICO, 30, linkToKindex: true)@Model.Firma.Jmeno: Dotace</h3>
-    <div><a class="btn btn-primary" href="/subjekt2/@Model.Firma.ICO">Zpět na přehled</a></div>
-    @WebUtil.CompanySummary(Model.Firma)
-</div>
-<hr />
-
-<div class="row boxes">
-    @* Pravý sloupec *@
-    @Html.CachedAction(HtmlExtensions.CachedActionLength.Cache12H, "RightColumn", Model.Firma, Model.Firma.ICO,
-        this.User.Identity.IsAuthenticated)
-
-    @* Prázdný sloupec *@
-    <div class="col-sm-1">
-    </div>
     @* První sloupec *@
     <div class="col-sm-7 col-sm-pull-5 col-xs-12 col-xs-pull-0">
         <div>
             <h4>Souhrn</h4>
             @{
-                var dotaceService = new HlidacStatu.Lib.Data.Dotace.DotaceService();
 
                 string durl = "/dotace/hledat?Q=ico%3A+" + Model.Firma.ICO;
                 var dotaceSuma = Model.Firma.StatistikaDotaci().Sum(s => s.CelkemCerpano);
@@ -351,4 +297,3 @@
         </div>
 
     </div>
-</div>
