--- a/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
+++ b/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
@@ -1,4 +1,4 @@
-﻿@model (HlidacStatu.Lib.Data.Firma firma, string viewName)
+﻿@model (HlidacStatu.Lib.Data.Firma firma, string viewName, string title)
 
 @using Nest;
 @using HlidacStatu.Web.Framework;
@@ -8,7 +8,10 @@
 @using System.Data;
 @using HlidacStatu.Lib.Render;
 
+@{ 
+    ViewBag.Title = Model.title;
 
+}
 @section breadcrumb
 {
     <ol class="breadcrumb">
@@ -34,25 +37,7 @@
     <script src="/scripts/highcharts-6/highcharts-more.js"></script>
     <script src="/scripts/highcharts-6/modules/heatmap.js"></script>
     <script src="/scripts/highcharts-6/modules/treemap.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('#datatable').DataTable({
-                "language": {
-                    "info": "Zobrazuji _START_. - _END_. z celkového počtu _TOTAL_ záznamů.",
-                    "search": "Hledat:",
-                    "lengthMenu": "Zobraz _MENU_ záznamů",
-                    "thousands": " ",
-                    "paginate": {
-                        "first": "První",
-                        "last": "Poslední",
-                        "next": "Další",
-                        "previous": "Předchozí"
-                    },
-                }
-            });
-        });
 
-    </script>
 
 }
 
@@ -95,5 +80,25 @@
     }
 </style>
 
-@Html.CachedAction(HtmlExtensions.CachedActionLength.debug, Model.viewName, Model.firma, Model.firma.ICO, this?.User?.Identity?.IsAuthenticated)
 
+
+<div class="head">
+    <h3>@Html.KIndexLabelLink(Model.firma.ICO, 30, linkToKindex: true)@Model.firma.Jmeno</h3>
+    @WebUtil.CompanySummary(Model.firma)
+</div>
+    <hr />
+    
+
+    <div class="row boxes">
+    @* Pravý sloupec *@
+    @Html.CachedAction(HtmlExtensions.CachedActionLength.Cache12H, "RightColumn", Model.firma, Model.firma.ICO,
+        this.User.Identity.IsAuthenticated)
+
+    @* Prázdný sloupec *@
+    <div class="col-sm-1">
+    </div>
+
+    @Html.CachedAction(HtmlExtensions.CachedActionLength.debug, Model.viewName, Model.firma, Model.firma.ICO, this?.User?.Identity?.IsAuthenticated)
+
+
+</div>
